<resources>
    <string name="app_name">LandlordCommunicationApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="dialog_title">LOGIN FAILED</string>
    <string name="dialog_message">Username or password incorrect! Please try again.</string>

    <!--Facebook login-->
    <string name="facebook_app_id">2123429834540963</string>
    <string name="fb_login_protocol_scheme">fb2123429834540963</string>
    <string name="username_signup">USERNAME</string>
    <string name="password_signup">PASSWORD</string>
    <string name="password_must_be_minimum_6_characters">(password must be minimum 6 characters)</string>
    <string name="username_must_be_minimum_6_characters">(username must be minimum 6 characters)</string>
    <string name="retype_password">RETYPE PASSWORD</string>
    <string name="please_choose_your_type">Please choose your type</string>
    <string name="tenant">Tenant</string>
    <string name="landlord">Landlord</string>
    <string name="continue_">CONTINUE</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="add_place">ADD PLACE</string>
    <string name="select_place">SELECT PLACE</string>
    <string name="please_enter_your_places_as_landlord">Please enter your places as landlord</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="rent_amount">Rent amount</string>
    <string name="year">Year</string>
    <string name="due_date">Due date</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="save">SAVE</string>
    <string name="select_tenant">SELECT TENANT</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_add">CANCEL</string>
    <string name="are_you_sure_changes_will_be_saved_to_your_account">ARE YOU SURE? FOLLOWING CHANGES WILL BE SAVED TO YOUR ACCOUNT!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="tenant_">Tenant:</string>
    <string name="home">HOME</string>
    <string name="please_select_tenant_from_the_following">PLEASE SELECT TENANT FROM THE FOLLOWING</string>
    <string name="done">DONE</string>
    <string name="please_select_places_from_bellow">Please select places from bellow</string>
    <string name="ready">READY</string>
    <string name="address_">Address:</string>
    <string name="my_places">MY PLACES</string>
    <string name="no_tenant">Tenant: NO TENANT</string>
    <string name="pay">PAY</string>
    <string name="landlord_no_landlord">Landlord: NO LANDLORD</string>
    <string name="address_no_address">Address: NO ADDRESS</string>
    <string name="description_no_description">Description: NO DESCRIPTION</string>
    <string name="rent_information_no_information">Rent information: NO INFORMATION</string>
    <string name="finish">FINISH</string>
    <string name="add_card">ADD CARD</string>
    <string name="choose_card">Choose card:</string>
    <string name="view">VIEW</string>
    <string name="minimum_amount_20_00_leva">(minimum amount 20.00 leva)</string>
    <string name="enter_amount">Enter amount</string>
    <string name="rem_amount">Rem. amount:</string>
    <string name="date">Date:</string>
    <string name="total_amount">Total amount:</string>
    <string name="gallery">GALLERY</string>
    <string name="input_message">Input message.</string>
    <string name="send">Send</string>
    <string name="landlord_communication">Landlord communication</string>
    <string name="we_will_make_your_communication_better_but_we_will_not_pay_your_rents_it_is_up_to_you">We will make your communication better, but we will not pay your rents. It is up to you.</string>
    <string name="chats">CHATS</string>
    <string name="payments">PAYMENTS</string>
    <string name="users">USERS</string>
    <string name="places">PLACES</string>
    <string name="template_message">TEMPLATE MESSAGE</string>
    <string name="please_choose_message">Please choose message</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="add">ADD</string>
    <string name="add_template_message">ADD TEMPLATE MESSAGE</string>

</resources>
