<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.login.addplace.AddPlaceFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_address"
            android:text="@string/address"
            android:layout_marginTop="15dp"
            android:layout_marginStart="120dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_enter_address"
            android:layout_below="@+id/tv_address"
            android:layout_marginTop="10dp"
            android:layout_marginStart="75dp"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_below="@+id/et_enter_address"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            android:text="@string/description"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_enter_description"
            android:layout_below="@+id/tv_description"
            android:layout_marginTop="10dp"
            android:layout_marginStart="75dp"
            android:layout_width="225dp"
            android:layout_height="95dp"
            android:inputType="text" />


        <TextView
            android:id="@+id/tv_rent_amount"
            android:text="@string/rent_amount"
            android:layout_below="@+id/et_enter_description"
            android:layout_marginTop="30dp"
            android:layout_marginStart="90dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_enter_amount"
            android:layout_below="@+id/tv_rent_amount"
            android:layout_marginTop="10dp"
            android:layout_marginStart="75dp"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_duedate"
            android:layout_below="@+id/et_enter_amount"
            android:text="@string/due_date"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="115dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_year"
            android:text="@string/year"
            android:layout_below="@+id/tv_duedate"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_enter_year"
            android:layout_below="@+id/tv_year"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_month"
            android:text="@string/month"
            android:layout_below="@+id/tv_duedate"
            android:layout_marginTop="10dp"
            android:layout_marginStart="150dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_enter_month"
            android:layout_below="@+id/tv_month"
            android:layout_marginTop="5dp"
            android:layout_marginStart="155dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_day"
            android:text="@string/day"
            android:layout_below="@+id/tv_duedate"
            android:layout_marginTop="10dp"
            android:layout_marginStart="295dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_enter_day"
            android:layout_below="@+id/tv_day"
            android:layout_marginTop="5dp"
            android:layout_marginStart="290dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_save"
            android:layout_below="@+id/et_enter_month"
            android:text="@string/save"
            android:layout_marginTop="40dp"
            android:layout_marginStart="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </RelativeLayout>


</ScrollView>