<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.login.placedetails.PlaceDetailsFragment">


    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/custom_pay_button"
        android:text="EDIT"
        android:textColor="#000000"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="125dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_pay_button"
        android:text="@string/pay"
        android:textColor="#000000"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_landlord_info"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/landlord_no_landlord"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_tenant_info"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/tv_landlord_info"
                android:text="@string/no_tenant"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_address"
                android:textSize="26sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/tv_tenant_info"
                android:text="@string/address_no_address"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/tv_address"
                android:textSize="26sp"
                android:text="@string/description_no_description"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_rents"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@+id/tv_description"
                android:layout_marginTop="25dp"
                android:text="@string/rent_information_no_information"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.emredavarci.circleprogressbar.CircleProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>