<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".chat.templatemessage.TemplateMessageFragment">

    <TextView
        android:id="@+id/tv_choose_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:text="@string/please_choose_message" />

    <ListView
        android:id="@+id/lv_templ_messages"
        android:layout_below="@+id/tv_choose_message"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="400dp" />

    <EditText
        android:id="@+id/et_add_message"
        android:layout_below="@+id/lv_templ_messages"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:hint="@string/add_template_message"
        android:background="@drawable/login_edittext_style"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_add"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_pay_button"
        android:textColor="@color/md_black_1000"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_add_message"/>

</RelativeLayout>