<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.login.login.LoginFragment">

    <TextView
        android:id="@+id/tv_username"
        android:text="@string/username"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="130dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_username"
        android:layout_below="@id/tv_username"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:layout_width="205dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_password"
        android:text="@string/password"
        android:layout_below="@id/et_username"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:layout_marginStart="130dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:layout_below="@id/tv_password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:layout_width="205dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="13dp"
        android:layout_marginStart="95dp"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="13dp"
        android:layout_marginStart="200dp"
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="154dp"
        android:layout_below="@+id/btn_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="105dp"
        android:layout_marginTop="20dp" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loading_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>