<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.login.placemanagement.SignUpFinishFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_enter_places"
            android:text="@string/please_enter_you_places_as_landlord"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/lv_places"
            android:layout_below="@+id/tv_enter_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="NestedScrolling" />

        <Button
            android:id="@+id/btn_add_place"
            android:text="@string/add_place"
            android:layout_below="@+id/lv_places"
            android:layout_marginTop="10dp"
            android:layout_marginStart="135dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_select_place"
            android:text="@string/select_place"
            android:layout_below="@+id/lv_places"
            android:layout_marginTop="10dp"
            android:layout_marginStart="135dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_ready"
            android:text="@string/ready"
            android:layout_marginTop="410dp"
            android:layout_marginStart="135dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>


    </RelativeLayout>

</ScrollView>