<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.login.home.HomeFragment">

    <ImageView
        android:id="@+id/iv_chats"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/chat_image" />

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_chats"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_pay_button"
        android:text="@string/chats"
        android:textColor="@color/md_black_1000" />

    <ImageView
        android:id="@+id/iv_payments"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/money" />

    <Button
        android:id="@+id/btn_payments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_payments"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/custom_pay_button"
        android:padding="10dp"
        android:text="@string/payments"
        android:textColor="@color/md_black_1000" />


    <ImageView
        android:id="@+id/iv_users"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/users" />

    <Button
        android:id="@+id/btn_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_users"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/custom_pay_button"
        android:padding="10dp"
        android:text="@string/users"
        android:textColor="@color/md_black_1000" />

    <ImageView
        android:id="@+id/iv_places"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="350dp"
        android:layout_marginStart="45dp"
        android:src="@drawable/house_icon" />

    <Button
        android:id="@+id/btn_places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_places"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:layout_marginStart="45dp"
        android:background="@drawable/custom_pay_button"
        android:padding="10dp"
        android:text="@string/places"
        android:textColor="@color/md_black_1000" />

    <com.emredavarci.circleprogressbar.CircleProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>